--- a/package.json
+++ b/package.json
@@ -2,5 +2,12 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2"
+  },
+  "scripts": {
+    "test": "jest --coverage"
+},
+  "devDependencies": {
+    "@types/jest": "^29.5.11",
+    "jest": "^29.7.0"
   }
 }
