separate writing function

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "restful",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "separate writing function",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
