--- a/File_handling/package.json
+++ b/File_handling/package.json
@@ -2,5 +2,18 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2"
-  }
+  },
+  "name": "file_handling",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {
+    "jest": "^29.7.0"
+  },
+  "scripts": {
+    "test": "jest --coverage"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
