--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-node_modules/
-/coverage/
-persons.json
-persons2.json
-fileOperations.test.js
+/node_modules
+/coverage
+.persons.json
+.persons2.json
+.fileOperations.test.js
